# vite-tailwind-rust-postgres-starter

./: .env.example  README.md  docker-compose.yml  init-db.sh
frontend/: package.json
frontend/src/components/: Header.tsx
frontend/src/pages/: home.page.tsx  profile.page.tsx
middleware/: .gitignore  Cargo.toml  Dockerfile
middleware/migrations/2025-02-26-221154_users/: down.sql  up.sql
middleware/src/: authenticate_token.rs  config.rs  google_oauth.rs  handler.rs  main.rs  model.rs  response.rs  schema.rs
