[package]
name = "middleware"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.2.1"
chrono = { version = "0.4.23", features = ["serde"] }
diesel = {version="2.2.7", features=["r2d2","postgres"]}
dotenv = "0.15.0"
env_logger = "0.10.0"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
